--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+settings.json
+auth/
+
+# vim swap file
+*.swp
+
+# Data Files
+data
+
+### Common Ignore Rules ###
+
 # Logs
 logs
 *.log
@@ -103,8 +114,3 @@ dist
 # TernJS port file
 .tern-port
 
-settings.json
-auth/
-
-# vim swap file
-*.swp
