--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "eslint-plugin-standard": "^4.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "discord-oauth2": "^2.0.2",
     "discord.js": "^11.5.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "memorystore": "^1.6.2",
     "superagent": "^5.2.1"
   }
 }
