--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "discord-oauth2": "^2.0.2",
+    "discord-oauth2": "^2.2.0",
     "discord.js": "^11.5.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "flake-idgen": "^1.4.0",
+    "js-sha256": "^0.9.0",
     "memorystore": "^1.6.2",
     "superagent": "^5.2.1"
   }
